@@ -1,3 +1,12 @@
+2010-09-15  Romain Francois <romain@r-enthusiasts.com>
+
+    * DESCRIPTION: added the declaration MinimumSvnRev to control which version
+    of R-devel we need so that Rcpp fully works, currently set to 52905
+    
+    * R/zzz.R: check the svn revision of R against the declared MinimumSvnRev
+    requirement and print a message if necessary (this will only stay for the 
+    interim period while we develop 0.8.7 so that we all are on the same page.
+
 2010-09-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Date.cpp: Add include of unistd.h to make Solaris happy
